testdata/baselines/reference/submodule/conformance/thisTag2.errors.txt
a.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(4,10): error TS8010: Type annotations can only be used in TypeScript files.


==== a.js (2 errors) ====
    /** @this {string} */
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    export function f1() {}
    
    /** @this */
             
!!! error TS8010: Type annotations can only be used in TypeScript files.
    export function f2() {}
    